[package]
name = "nestxml"
version = "0.2.2"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Tools to easily nest XML or HTML elements"
license = "MIT"
homepage = "https://github.com/stephaneyfx/nestxml"
repository = "https://github.com/stephaneyfx/nestxml.git"
keywords = ["xml", "html", "nest"]

[dependencies]
xml-rs = "0.8.0"
